# mingw64-winsdk

./: .gitmodules  CMakeLists.txt  README.md  local-build.cmd
src/: main.cpp
